# standard_names

./: .gitattributes  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  Makefile  README.md  appveyor.yml  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.ci/appveyor/: anaconda_upload.py
.ci/travis/: deploy_to_anaconda.sh
.github/workflows/: format.yml  lint.yml  test.yml
ci/: requirements-lint-linux.yml  requirements-py36-windows.yml  requirements-py37-linux.yml  requirements-py38-linux.yml
conda-recipe/: meta.yaml
data/: master.txt  models.yaml  scraped.yaml
docs/: Makefile
docs/source/: conf.py  getting.rst  index.rst  modules.rst  standard_names.cmd.rst  standard_names.rst  standard_names.tests.rst
scripts/: scrape_csdms_names.sh  scrape_csdms_names_to_sqlite.sh  scrape_csdms_names_to_wiki.sh
src/: CHANGES.txt  LICENSE.txt  MANIFEST.in  README.md  README.txt  setup.py
src/cmt/: __init__.py
src/cmt/standard_names/: __init__.py  collection.py  decorators.py  io.py  snbuild.py  sndump.py  snscrape.py  standardname.py  validnames.py
src/cmt/standard_names/data/: standard_names.yaml
src/cmt/standard_names/tests/: test_collection.py  test_io.py  test_standardname.py
src/scripts/: snbuild  sndump  snscrape
src/standard_names/: __init__.py  __main__.py  _format.py  _version.py  collection.py  decorators.py  error.py  io.py  peg.py  regex.py  registry.py  snbuild.py  sndump.py  snscrape.py  standardname.py  validnames.py
src/standard_names/cli/: _scrape.py  _sql.py  _validate.py  main.py
src/standard_names/cmd/: snbuild.py  sndump.py  snscrape.py  snsql.py  snvalidate.py
src/standard_names/data/: names-0.8.6.txt  names-2.0.0.txt  standard_names.yaml
src/standard_names/tests/: __init__.py  test_collection.py  test_standardname.py
src/standard_names/utilities/: __init__.py  decorators.py  io.py
standard_names/: __init__.py  _version.py  decorators.py  error.py  io.py  registry.py  standardname.py  validnames.py
standard_names/cmd/: snbuild.py  sndump.py  snscrape.py  snsql.py  snvalidate.py
standard_names/data/: names-0.8.5.txt  names.txt  standard_names.yaml
standard_names/tests/: test_collection.py  test_io.py  test_namesregistry.py  test_standardname.py
standard_names/utilities/: __init__.py  decorators.py  io.py
tests/: io_test.py  namesregistry_test.py  standardname_test.py
