[project]
name = "standard_names"
requires-python = ">=3.10"
description = "Python utilities for working with CSDMS Standard Names"
keywords = [
    "csdms",
    "python",
    "standard names",
    "utilities",
]
authors = [
    { name = "Eric Hutton" },
    { email = "eric.hutton@colorado.edu" },
]
maintainers = [
    { name = "Eric Hutton" },
    { email = "eric.hutton@colorado.edu" },
    { name = "Mark Piper" },
    { email = "mark.piper@colorado.edu" },
    { name = "The CSDMS team" },
    { email = "csdms@colorado.edu" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dynamic = [
    "readme",
    "version",
]
dependencies = [
    "packaging",
]

[project.license]
text = "MIT"

[project.urls]
Documentation = "https://standard-names.readthedocs.io/"
Homepage = "https://csdms.colorado.edu"
Issues = "https://github.com/csdms/standard_names/issues"
Repository = "https://github.com/csdms/standard_names"

[project.optional-dependencies]
peg = [
    "pyparsing",
]
dev = [
    "nox",
]
testing = [
    "coverage",
    "pytest",
    "pytest-cov",
]
docs = [
    "sphinx",
]

[project.scripts]
"standard-names" = "standard_names.cmd.main:main"

[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.dynamic.version]
attr = "standard_names._version.__version__"

[tool.setuptools.package-data]
standard_names = [
    "data/*.txt",
]

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.isort]
profile = "black"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "src/standard_names",
    "tests",
]
norecursedirs = [
    ".*",
    "*.egg*",
    "build",
    "dist",
]
addopts = [
    "--tb=native",
    "--strict-markers",
    "--durations=16",
    "--doctest-modules",
    "-vvv",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE",
]

[tool.zest-releaser]
tag-format = "v{version}"
python-file-with-version = "src/standard_names/_version.py"
